<resources>
    <string name="app_name">SaluDate</string>

    <string name="action_settings">Ajustes</string>

    <string name="one">En desarrollo</string>
    <string name="three">En desarrollo</string>
    <string name="two">En desarrollo</string>

    <string name="bloodType">Grupo Sanguineo</string>
    <string name="height">Talla</string>
    <string name="weight">Peso</string>


    <string name="pendient">Por Atender</string>
    <string name="done">Atendido</string>
    <string name="canceled">Cancelado</string>

    <string name="title_activity_menu_principal">SaluDate</string>
    <string name="title_activity_nueva_cita">Nueva Cita</string>
    <string name="title_activity_ficha_medica">Ficha Médica</string>
    <string name="title_first_tab">CITAS PENDIENTES</string>
    <string name="title_second_tab">HISTORIAL DE CITAS</string>


    <string name="btn_menu_principal">Menú Principal</string>

    <string name="usuario">Usuario</string>
    <string name="password">******</string>
    <string name="OlvContra"><u>Olvidé mi contraseña</u></string>
    <string name="iniciarSesion">INICIAR SESIÓN</string>

    <string name="login_succesful">Bienvenido a SaluDate</string>
    <string name="login_fail">Usuario o Contraseña Incorrectos</string>
    <string name="connection_error">Error de conexión</string>
    <string name="noInternet">No hay conexion a Internet</string>

    <string name="snackbar_menuprincipal">Agregar nueva cita</string>
    <string name="toast_fichamedica">Ficha Médica</string>

    <string name="textView_nuevaCita">Programar Cita</string>
    <string name="activar_notificaciones">Activar notificaciones</string>

    <string-array name="especialidad_array">
        <item>Seleccione una especialidad</item>
    </string-array>

    <string-array name="doctor_array">
        <item>Seleccione un(a) doctor(a)</item>
    </string-array>

    <string-array name="horarios_array">
        <item>Seleccione un horario</item>
    </string-array>

    <string name="switch_info_true">Se activaron las notificaciones</string>
    <string name="switch_info_false">Se desactivaron las notificaciones</string>

    <string name="datos_incorrectos">Usuario o contraseña incorrectos</string>
    <string name="log_out">Cerrar Sesión</string>

    <string name="toast_calendar">Calendario</string>
    <string name="current_date">June, 2016</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">DOM</string>
    <string name="mon">LUN</string>
    <string name="tue">MAR</string>
    <string name="wed">MIE</string>
    <string name="thu">JUE</string>
    <string name="fri">VIE</string>
    <string name="sat">SAB</string>
    <string name="last_date">30</string>
    <string name="remember_me">Recordarme</string>
</resources>
