<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoSaludD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="2.5"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/saludate_logo_400x100">
        </ImageView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="2.5">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="0.1"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtxtUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/usuario"
                    android:inputType="textPersonName" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    app:srcCompat="@drawable/user4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="0.1"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtxtPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <ImageView
                    android:id="@+id/imagePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    app:srcCompat="@drawable/lock_fill" />
            </LinearLayout>
            <CheckBox
                android:id="@+id/saveLoginCheckBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editTextPassword"
                android:text="@string/remember_me"
                android:layout_marginBottom="2dp"
                />
            <TextView
                android:id="@+id/txtOvidarContra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|end"
                android:gravity="right|end"
                android:autoLink="all"
                android:layout_weight="0.5"
                android:clickable="true"
                android:text="@string/OlvContra"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            >
            <Button
                android:id="@+id/btnIniciarSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@android:drawable/button_onoff_indicator_off"
                android:backgroundTint="@color/textColorPrimary"
                android:text="@string/iniciarSesion"
                android:textColor="@color/colorAccent">
            </Button>
        </LinearLayout>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>